menu-app/src/main/java/org/example/menuapp/error/custom_exceptions/OrderDeletionException.java
package org.example.menuapp.error.custom_exceptions;

public class OrderDeletionException extends RuntimeException {
    public OrderDeletionException(String message) {
        super(message);
    }
}
